--- a/app/src/main/res/raw/body.yml
+++ b/app/src/main/res/raw/body.yml
@@ -41,10 +41,10 @@ parts:
               throat:
           chin:
       ears:
+        dual: ear
       neck:
   arms:
     dual: arm
-    events:
     parts:
       hand:
         parts:
@@ -69,14 +69,8 @@ parts:
       upperArm:
       elbow:
   chest:
-    events:
-    parts:
   stomack:
-    events:
-    parts:
   hip:
-    events:
-    parts:
   legs:
     dual: leg
     parts:
