--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <provider android:name=".ui.RecentEventTypesProvider"
+            android:authorities="com.ewind.hl.ui.RecentEventTypesProvider" />
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -30,6 +34,12 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustNothing"/>
+
+        <activity android:name=".ui.EventTypeSearchActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
