--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:name=".ui.RecentEventTypesProvider"
             android:authorities="com.ewind.hl.ui.RecentEventTypesProvider" />
 
+        <provider
+            android:name=".ui.RecentAreasProvider"
+            android:authorities="com.ewind.hl.ui.RecentAreasProvider" />
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -41,6 +45,11 @@
 
         <activity
             android:name=".ui.EventTypeSearchActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustNothing" />
+
+        <activity
+            android:name=".ui.AreaSearchActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustNothing" />
     </application>
