--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,7 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'joda-time:joda-time:2.10'
-    implementation ("com.opencsv:opencsv:4.2") {
-        exclude group: 'commons-logging', module: 'commons-logging'
-    }
+    implementation 'org.apache.commons:commons-csv:1.5'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.10.0'
