--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,13 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.5'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.dan-td:snappy-recyclerview:1.0.2'
     implementation 'joda-time:joda-time:2.10'
     implementation 'org.apache.commons:commons-csv:1.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.android.gms:play-services-drive:16.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.10.0'
