--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,14 +37,8 @@
             android:label="@string/app_name" />
 
         <activity
-            android:name=".ui.history.GraphHistoryActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustNothing" />
-
-        <activity
-            android:name=".ui.history.ListHistoryActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustNothing" />
+            android:name=".ui.history.HistoryActivity"
+            android:label="@string/app_name" />
 
         <activity
             android:name=".ui.EventTypeSearchActivity"
